Add remote-presentation-iframe to notes view; Change slides when scroll hits the .changeSlide element; Add styles to .changeSlide

--- a/lang/sage.pot
+++ b/lang/sage.pot
@@ -109,3 +109,19 @@ msgstr ""
 #. Template Name of the plugin/theme
 msgid "Custom Template"
 msgstr ""
+
+#.
+msgid "left"
+msgstr ""
+
+#.
+msgid "right"
+msgstr ""
+
+#.
+msgid "up"
+msgstr ""
+
+#.
+msgid "down"
+msgstr ""
